# antares-deps

./: CMakeLists.txt  README.md  repository-config.txt.cmake
.github/workflows/: centos.yml  docker_publish.yml  linux.yml  oracle8.yml  releasesCentos.yml  releasesLinux.yml  releasesOracle8.yml  releasesUbuntu.yml  releasesWindows.yml  ubuntu.yml  windows.yml
cmake/: additionnal-definitions.cmake  utils.cmake
cmake/dependencies/: CMakeLists.txt  CMakeLists.txt.in
cmake/dependencies/boost/: CMakeLists.txt.in
docker/: centos7  centos7-antares-build  centos7-ortools  centos8  centos8-ortools  ubuntu
